Found an issue that needed fixed on one of the cards.  Fixed white space at top and bottom, made it more responsive, and added a fade in affect.  Also adjusted the background on home page

--- a/src/App.css
+++ b/src/App.css
@@ -400,7 +400,7 @@ button {
     opacity: 90%;
 }
 #present{
-    height: 24vh;
+    height: 29vh;
 }
 .card{
     opacity: 90%;
